# splitdumb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  nginx.conf
src/: cli.rs  errors.rs  logic.rs  main.rs  models.rs  storage.rs  tests.rs
src/handlers/: auth.rs  expenses.rs  groups.rs  mod.rs  users.rs
web/: .env.example  README.md  index.html  package.json  vite.config.ts
web/src/: App.css  App.svelte  App.tsx  app.css  index.css  main.tsx  types.ts
web/src/components/: BalanceSummary.tsx  Dashboard.tsx  ErrorBoundary.tsx  ExpenseForm.tsx  ExpenseList.tsx  GroupHeader.tsx  LoginPage.tsx  MemberList.tsx  SettlementCard.tsx  ToastContainer.css  ToastContainer.tsx  UserForm.tsx
web/src/contexts/: AuthContext.tsx  ToastContext.tsx
web/src/hooks/: useForm.ts
web/src/lib/: BalanceSummary.svelte  Dashboard.svelte  ExpenseForm.svelte  ExpenseList.svelte  GroupHeader.svelte  LoginPage.svelte  MemberList.svelte  SettlementCard.svelte  ToastContainer.svelte  UserForm.svelte  api.ts  types.ts
web/src/lib/stores/: auth.ts  toast.ts
web/src/lib/utils/: logger.ts
web/src/services/: api.ts
web/src/utils/: date.ts  phone.ts
