[package]
name = "splitwise-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
axum = "0.8.2"
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
